src/renderer/components/List/style.scss
@use "../mixins.scss" as *;

.contact {
  margin: 0 -12px;
  overflow: hidden auto;
  height: calc(100% - 2.5rem);
}

.list {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  gap: 8px;
  flex: 1;
  margin: 0;
  padding: 0.5rem 0;

  @include dark {
    color: white;
  }

  @include light {
    color: black;
  }

  &--one-line .list-item__subtitle {
    -webkit-line-clamp: 1;
  }

  &--two-line .list-item__subtitle {
    -webkit-line-clamp: 2;
  }

  &--three-line .list-item__subtitle {
    -webkit-line-clamp: 3;
  }

  &-item {
    width: 100%;
    height: 63px;
    margin: 0 10px;
    padding: 5px 10px;
    border-radius: 8px;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.622rem;
    transition: background-color 150ms cubic-bezier(1, 0, 1, 1);


    &:hover {
      margin: 0 10px;
      padding: 5px 10px;
      border-radius: 8px;
      @include dark {
        background-color: rgba($color: white, $alpha: 0.05);
      }

      @include light {
        background-color: rgba($color: black, $alpha: 0.05);
      }
    }

    &--selected, &--selected:hover {
      background-color: var(--colorBrandForeground1);
      margin: 0 10px;
      padding: 5px 10px;
      border-radius: 8px;
      box-shadow: 1px 2px 8px rgb(from var(--colorBrandForeground1) r g b / 0.32);
      color: var(--colorNeutralForegroundOnBrand);
    }

    &__title {
      hyphens: auto;
      font-size: var(--fontSizeBase300);
      font-weight: 600;
      word-wrap: break-word;
      word-break: normal;
      text-overflow: ellipsis;
      line-height: 1.5rem;
      padding: 0;
      margin: 0;
    }

    &__subtitle {
      display: -webkit-box;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 2;
      overflow: hidden;
      max-height: 2rem;
      font-size: var(--fontSizeBase200);
      font-weight: 400;
      letter-spacing: 0.0178em;
      opacity: 0.8;
      line-height: 1rem;
      padding: 0;
      margin: 0;
    }

    &__icon {
      width: 24px;
      height: 24px;
    }

    &__content {
      flex: 1;
      width: 100%;
      height: 3.6rem;
      display: grid;
      align-content: center;
      justify-content: start;
      align-items: baseline;
      justify-items: stretch;
    }
  }

  &-subheader {
    padding: 0 1.2rem;
    font-size: var(--fontSizeBase300);
    font-weight: 500;
    opacity: 0.8;
    line-height: 1rem;
    text-transform: uppercase;
    letter-spacing: 0.0178em;
    margin: 0;
    list-style: none;

    &__title {
      margin: 0;
      padding: 0;
      font-weight: lighter;
      font-size: 0.875rem;
      color: #ccc;
    }
  }
}

